# crc32_digest

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: digest.rs
